--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   rename: ^3.0.2
+  geolocator: ^13.0.3
+  font_awesome_flutter: ^10.8.0
+  intl: ^0.20.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
